Replace List.of with Arrays.asList for JDK 8 compatibility.